<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_display_one_overlay"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".activities.DisplayOneActivityOverlay" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:orientation="vertical" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_clarity" />

        <Button
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_comment" />

        <Button
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_action_save" />

        <Button
            style="@style/ActionBarButtonLandscape"
            android:drawableRight="@drawable/ic_menu_down" />
    </LinearLayout>

    <FrameLayout style="@style/SeparatorBarVertical" />

    <de.eisfeldj.augendiagnose.components.OverlayPinchImageView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainImage"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/separatorTools"
        style="@style/SeparatorBarVertical" />

    <LinearLayout
        android:id="@+id/seekBarBrightnessLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_brightness"
            android:src="@drawable/ic_seek_brightness" />

        <de.eisfeldj.augendiagnose.components.VerticalSeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekBarContrastLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_contrast"
            android:src="@drawable/ic_seek_contrast" />

        <de.eisfeldj.augendiagnose.components.VerticalSeekBar
            android:id="@+id/seekBarContrast"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonOverlayLayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/toggleButtonOverlayCircle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center"
            android:padding="0dp"
            android:textOff="@string/toggle_circle"
            android:textOn="@string/toggle_circle"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_1"
            android:textOn="@string/toggle_overlay_1" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_2"
            android:textOn="@string/toggle_overlay_2" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_3"
            android:textOn="@string/toggle_overlay_3" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_4"
            android:textOn="@string/toggle_overlay_4" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_5"
            android:textOn="@string/toggle_overlay_5" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_6"
            android:textOn="@string/toggle_overlay_6" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:textOff="@string/toggle_overlay_7"
            android:textOn="@string/toggle_overlay_7" />

        <Button
            android:id="@+id/buttonSelectColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/button_select_color"
            android:textSize="@dimen/icon_overlay_color_size" />

        <ToggleButton
            android:id="@+id/toggleButtonLink"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/lock"
            android:checked="false"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

</LinearLayout>