<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".activities.DisplayOneActivityOverlay" >

    <de.eisfeldj.augendiagnose.components.OverlayPinchImageView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/seekBarBrightnessLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_brightness"
            android:src="@drawable/ic_seek_brightness" />

        <SeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekBarContrastLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_contrast"
            android:src="@drawable/ic_seek_contrast" />

        <SeekBar
            android:id="@+id/seekBarContrast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:max="100"
            android:progress="50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonOverlayLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/toggleButtonOverlayCircle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:drawableBottom="@drawable/ic_circle"
            android:textOff=""
            android:textOn=""
            android:textSize="0pt" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/toggle_overlay_1"
            android:textOn="@string/toggle_overlay_1" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/toggle_overlay_2"
            android:textOn="@string/toggle_overlay_2" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/toggle_overlay_3"
            android:textOn="@string/toggle_overlay_3" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/toggle_overlay_4"
            android:textOn="@string/toggle_overlay_4" />

        <ToggleButton
            android:id="@+id/toggleButtonOverlay5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/toggle_overlay_5"
            android:textOn="@string/toggle_overlay_5" />

        <ToggleButton
            android:id="@+id/toggleButtonLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/lock"
            android:checked="false"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

</LinearLayout>